# core

./: .gitignore  CMakeLists.txt
projects/: configure-win-vs2010.bat  configure-win-vs2017.bat
src/: CMakeLists.txt  animation.cpp  animation.h  animation_char.cpp  animation_char.h  animation_frame.cpp  animation_frame.h  animation_set.cpp  animation_set.h  api.cpp  api.h  callbacks.h  main.cpp  main.h  utils.h
